[workspace]
resolver = "3"
members = ["ta-*"]

[workspace.package]
version = "0.1.0"
authors = ["Pépe Hanisch"]
license = "UNLICENSED"
edition = "2024"

[workspace.dependencies]
clap = { version = "=4.6.1", features = ["derive"] }
image = "=0.25.10"
ratatui = "=0.30.0"
ab_glyph = "=0.2.32"

# Performance optimized release build
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Fast development build
[profile.dev]
opt-level = 0
debug = 1
incremental = true

# Increase dependency speed
[profile.dev.package."*"]
opt-level = 2
